# rs-summarizer

./: .gitignore  Cargo.toml  README.md  plan.md
.github/workflows/: release.yml
.kiro/skills/: askama-templates.md  background-tasks.md  cargo-workflow.md  dependency-updates.md  environment-setup.md  error-handling.md  gemini-api-models.md  integration-testing.md  markdown-processing.md  polling-mechanism.md  rate-limiting.md  sqlite-sqlx-patterns.md  testing.md  vtt-parsing.md  yt-dlp-invocation.md
.kiro/skills/askama-templates/: SKILL.md
.kiro/skills/background-tasks/: SKILL.md
.kiro/skills/cargo-workflow/: SKILL.md
.kiro/skills/dependency-updates/: SKILL.md
.kiro/skills/environment-setup/: SKILL.md
.kiro/skills/error-handling/: SKILL.md
.kiro/skills/gemini-api-models/: SKILL.md
.kiro/skills/integration-testing/: SKILL.md
.kiro/skills/markdown-processing/: SKILL.md
.kiro/skills/polling-mechanism/: SKILL.md
.kiro/skills/rate-limiting/: SKILL.md
.kiro/skills/release-process/: SKILL.md
.kiro/skills/skill-creator/: SKILL.md
.kiro/skills/skill-creator/references/: format-guide.md
.kiro/skills/sqlite-sqlx-patterns/: SKILL.md
.kiro/skills/testing/: SKILL.md
.kiro/skills/vtt-parsing/: SKILL.md
.kiro/skills/yt-dlp-invocation/: SKILL.md
.kiro/specs/browser-integration-tests/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/embedding-visualization/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/enhanced-summary-prompt/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/rs-summarizer/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/steering/: project.md
doc/: subtitles.md
migrations/: 001_initial.sql
patches/: fast-umap-mod.patch
prompts/: collect_project_info.sh  system_instruction.txt  visual.txt
scripts/: apply_submodule_patches.sh  create_synthetic_db.py  migrate.py  release-check.sh  release.sh  run_release_gpu_gui.sh
src/: cache.rs  db.rs  errors.rs  lib.rs  main.rs  models.rs  state.rs  tasks.rs  templates.rs
src/commands/: export_db.rs  mod.rs
src/routes/: mod.rs
src/services/: deduplication.rs  embedding.rs  mod.rs  nn_mapper.rs  rate_limiter.rs  summary.rs  transcript.rs
src/utils/: markdown_converter.rs  markdown_renderer.rs  mod.rs  timestamp_linker.rs  url_validator.rs  vtt_parser.rs
templates/: browse.html  generation_partial.html  index.html  search_results.html
tests/: integration_browser.rs  integration_pipeline.rs  integration_transcript.rs
viz-tool/: AGENTS.md  Cargo.toml  deps.md
viz-tool/proptest-regressions/: cluster_titler.txt  data_loader.txt
viz-tool/src/: cli.rs  cli_runner.rs  cluster_titler.rs  data_loader.rs  dbscan_engine.rs  embedding.rs  errors.rs  lib.rs  main.rs  nn_mapper.rs  umap_engine.rs  viz_app.rs
