[workspace]
members = [".", "viz-tool"]

[patch.crates-io]
fast-umap = { path = "third_party/fast-umap" }

[package]
name = "rs-summarizer"
version = "0.5.0"
edition = "2021"

[dependencies]
tokio = { version = "1.52", features = ["full"] }
axum = "0.8"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros"] }
gemini-rust = "1.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
askama = "0.16"
regex = "1.12"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.6", features = ["fs"] }
futures-util = "0.3"
vtt = "1.0"
pulldown-cmark = "0.13.3"
fast-umap = { version = "1.6.0", features = ["gpu"] }
burn = { version = "=0.20.1", features = ["wgpu", "autodiff"], default-features = false }
burn-autodiff = "=0.20.1"
burn-cubecl = "=0.20.1"
cubecl = { version = "=0.9.0", features = ["wgpu"] }

[dev-dependencies]
proptest = "1.11"
fantoccini = "0.22"
serde_json = "1.0"
tokio-util = { version = "0.7", features = ["rt"] }
tempfile = "3.27"
