[package]
name = "viz-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.34.2"
egui_plot = "0.35.0"
fast-umap = { version = "1.6.0", features = ["gpu"] }
burn = { version = "=0.20.1", features = ["wgpu", "autodiff"], default-features = false }
burn-autodiff = "=0.20.1"
burn-cubecl = "=0.20.1"
cubecl = { version = "=0.9.0", features = ["wgpu"] }
linfa-clustering = "0.8.1"
linfa = "0.8.1"
ndarray = "0.17"
sqlx = { version = "0.8", features = ["sqlite", "macros"] }
gemini-rust = "1.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
tokio = { version = "1.52", features = ["rt", "rt-multi-thread"] }
rfd = "0.17"

[dev-dependencies]
proptest = "1.11"
