[package]
name = "viz-tool"
version = "0.1.0"
edition = "2021"

[features]
default = ["gpu"]
gpu = ["fast-umap/gpu", "burn/wgpu", "burn-cubecl", "cubecl/wgpu"]
cpu = ["fast-umap", "burn/ndarray"]

[dependencies]
eframe = "0.34.2"
egui_plot = "0.35.0"
fast-umap = { version = "1.6.0", optional = true }
burn = { version = "=0.20.1", features = ["autodiff"], default-features = false, optional = true }
#[cfg(feature = "gpu")]
burn-autodiff = { version = "=0.20.1", optional = true }
#[cfg(feature = "gpu")]
burn-cubecl = { version = "=0.20.1", optional = true }
#[cfg(feature = "gpu")]
cubecl = { version = "=0.9.0", optional = true }
ndarray-linalg = "0.16"
linfa-clustering = "0.8.1"
linfa = "0.8.1"
ndarray = "0.17"
sqlx = { version = "0.8", features = ["sqlite", "macros", "runtime-tokio"] }
gemini-rust = "1.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
tokio = { version = "1.52", features = ["rt", "rt-multi-thread", "macros"] }
rfd = "0.17"
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
rand = "0.8"

[dev-dependencies]
proptest = "1.11"
tempfile = "3.19"
