[package]
name = "viz-tool"
version = "0.1.0"
edition = "2021"

[features]
# Default to CPU-only build for minimal, non-GPU path
default = ["cpu", "gui"]

cpu = ["fast-umap/cpu", "burn/ndarray", "burn-autodiff"]
# GPU feature enables parametric UMAP via fast-umap GPU backend
gpu = ["fast-umap/gpu", "burn/wgpu", "burn-cubecl", "cubecl/wgpu", "burn-autodiff"]
# GUI feature pulls in eframe/egui_plot/rfd as optional dependencies
gui = ["eframe", "egui_plot", "rfd"]

[dependencies]
# GUI deps are optional and enabled via the "gui" feature
eframe = { version = "0.34.2", optional = true }
egui_plot = { version = "0.35.0", optional = true }

fast-umap = { version = "1.6.0", optional = true }
burn = { version = "=0.20.1", features = ["autodiff"], default-features = false, optional = true }
burn-autodiff = { version = "=0.20.1", optional = true }
burn-cubecl = { version = "=0.20.1", optional = true }
cubecl = { version = "0.9.0", optional = true }

ndarray = "0.17"
sqlx = { version = "0.8", features = ["sqlite", "macros", "runtime-tokio" ] }
gemini-rust = "1.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
tokio = { version = "1.52", features = ["rt", "rt-multi-thread", "macros"] }
# rfd is only required for GUI file dialogs
rfd = { version = "0.17", optional = true }
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
rand = "0.8"

[dev-dependencies]
proptest = "1.11"
tempfile = "3.19"
